# BundleFusion_Ubuntu_V0

./: CMakeLists.txt  README.md  readme  zParametersDefault.txt
FriedLiver/: outputPose.txt
FriedLiver/Include/Uplink/core/: platform.h
FriedLiver/Source/: BinaryDumpReader.cpp  BinaryDumpReader.h  Bundler.cpp  CUDACache.cpp  CUDACache.h  CUDAImageCalibrator.cpp  CUDAImageCalibrator.h  CUDAImageManager.cpp  CUDAImageManager.h  CUDAImageUtil.cu  CUDAImageUtil.h  ConditionManager.cpp  ConditionManager.h  DualGPU.cpp  FriedLiver.cpp  FriedLiver.h  GlobalAppState.cpp  GlobalAppState.h  GlobalBundlingState.h  OnlineBundler.cpp  OnlineBundler.h  OnlineBundlerHelper.h  PoseHelper.h  PrimeSenseSensor.cpp  PrimeSenseSensor.h  RGBDSensor.cpp  RGBDSensor.h  SBA.cpp  SBA.cu  SensorDataReader.cpp  SensorDataReader.h  SiftVisualization.cpp  StructureSensor.h  mLib.cpp  mLib.h  stdafx.h
FriedLiver/Source/DepthSensing/: CUDAMarchingCubesHashSDF.cpp  CUDARayCastSDF.cpp  CUDARayCastSDF.h  CUDAScan.h  CUDASceneRepChunkGrid.cpp  CUDASceneRepChunkGrid.h  CUDASceneRepHashSDF.h  DepthSensing.cpp  RayCastSDFUtil.h  StdOutputLogger.cpp  StdOutputLogger.h  VoxelUtilHashSDF.h
FriedLiver/Source/SiftGPU/: MatrixConversion.h  SIFTImageManager.cpp  SIFTImageManager.h  SiftGPU.cpp  cuda_SimpleMatrixUtil.h  cuda_surfaceArea.h
FriedLiver/Source/Solver/: CUDASolverBundling.h  ICPUtil.h  LieDerivUtil.h  SolverBundling.cu
cmake_modules/: Findsophus.cmake  SophusConfig.cmake
mLib/include/: mLibCore.h  mLibD3D11.cpp  mLibLodePNG.cpp
mLib/include/core-math/: matrix3x3.h  matrix4x4.h  vec1.h
mLib/include/core-mesh/: meshIO.cpp  meshShapes.h  plyHeader.h  pointCloud.cpp  pointCloudIO.cpp  pointCloudIO.h  triMeshAcceleratorBVHMatt.h  triMeshCollisionAccelerator.h  triMeshSampler.h
mLib/include/core-util/: binaryDataBuffer.h  timer.h  utility.h
mLib/include/ext-depthcamera/: sensorData.h
mLib/src/application-base/: applicationWin32.cpp  windowWin32.cpp
mLib/src/application-d3d11/: D3D11GraphicsDevice.cpp  D3D11ShaderManager.cpp  D3D11TriMesh.cpp  D3D11Utility.cpp  D3D11VertexShader.cpp
mLib/src/core-multithreading/: threadPool.cpp
mLib/src/core-util/: directory.cpp  utility.cpp  windowsUtil.cpp
mLib/src/ext-depthcamera/: image.cpp
mLib/src/ext-lodepng/: imageLoaderLodePNG.cpp
mLib/test/D3D11VS2015/: mLibInclude.h  mLibSource.cpp  main.cpp  vizzer.cpp
mLib/test/frameworkD3D11/: frameworkD3D11.sln  frameworkD3D11.vcxproj  gates381.ply
mLib/test/testD3D11/: testD3D11.sln
mLib/test/testD3D11/scans/: gates381.off
mLib/test/testD3D11/shaders/: test.hlsl
mLib/test/testD3D11/src/: mLibInclude.h  main.cpp
mLib/test/testLinux/: Makefile
mLib/test/testLinux/src/: mLibSource.cpp
mLib/test/testWindows/: Makefile  testCore.vcxproj  testCore.vcxproj.filters
mLib/test/testWindows/src/: mLibSource.cpp  test.h  testBox.h  testUtility.h
